// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. mobile primary image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  padding-left: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 0px;
  }
}

<Component
  captionOptions={
    Object {
      "caption": "Some caption",
      "credits": "Some credits",
    }
  }
  imageOptions={
    Object {
      "display": "primary",
      "ratio": "15:12",
      "uri": "https://img/someImage",
    }
  }
>
  <div>
    <TimesImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      fadeImageIn={false}
      highResSize={null}
      lowResSize={null}
      uri="https://img/someImage"
    />
  </div>
  <div>
    <responsiveweb__InsetCaptionStyle>
      <div
        className="c1"
      >
        <div>
          <div>
            <div>
              Some caption
            </div>
            <div>
              SOME CREDITS
            </div>
          </div>
        </div>
      </div>
    </responsiveweb__InsetCaptionStyle>
  </div>
</Component>
`;

exports[`2. tablet primary image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  padding-left: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 0px;
  }
}

<Component
  captionOptions={
    Object {
      "caption": "Some caption",
      "credits": "Some credits",
    }
  }
  imageOptions={
    Object {
      "display": "primary",
      "ratio": "15:12",
      "uri": "https://img/someImage",
    }
  }
>
  <div>
    <TimesImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      fadeImageIn={false}
      highResSize={null}
      lowResSize={null}
      uri="https://img/someImage"
    />
  </div>
  <div>
    <responsiveweb__InsetCaptionStyle>
      <div
        className="c1"
      >
        <div>
          <div>
            <div>
              Some caption
            </div>
            <div>
              SOME CREDITS
            </div>
          </div>
        </div>
      </div>
    </responsiveweb__InsetCaptionStyle>
  </div>
</Component>
`;

exports[`3. mobile fullwidth image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  padding-left: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 0px;
  }
}

<Component
  captionOptions={
    Object {
      "caption": "Some caption",
      "credits": "Some credits",
    }
  }
  imageOptions={
    Object {
      "display": "primary",
      "ratio": "15:12",
      "uri": "https://img/someImage",
    }
  }
>
  <div>
    <TimesImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      fadeImageIn={false}
      highResSize={null}
      lowResSize={null}
      uri="https://img/someImage"
    />
  </div>
  <div>
    <responsiveweb__InsetCaptionStyle>
      <div
        className="c1"
      >
        <div>
          <div>
            <div>
              Some caption
            </div>
            <div>
              SOME CREDITS
            </div>
          </div>
        </div>
      </div>
    </responsiveweb__InsetCaptionStyle>
  </div>
</Component>
`;

exports[`4. tablet fullwidth image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  padding-left: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 0px;
  }
}

<Component
  captionOptions={
    Object {
      "caption": "Some caption",
      "credits": "Some credits",
    }
  }
  imageOptions={
    Object {
      "display": "primary",
      "ratio": "15:12",
      "uri": "https://img/someImage",
    }
  }
>
  <div>
    <TimesImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      fadeImageIn={false}
      highResSize={null}
      lowResSize={null}
      uri="https://img/someImage"
    />
  </div>
  <div>
    <responsiveweb__InsetCaptionStyle>
      <div
        className="c1"
      >
        <div>
          <div>
            <div>
              Some caption
            </div>
            <div>
              SOME CREDITS
            </div>
          </div>
        </div>
      </div>
    </responsiveweb__InsetCaptionStyle>
  </div>
</Component>
`;

exports[`5. secondary image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<Component
  captionOptions={
    Object {
      "caption": "Another caption",
      "credits": "Other credits",
    }
  }
  imageOptions={
    Object {
      "display": "secondary",
      "ratio": "3:2",
      "uri": "https://img/someImage",
    }
  }
>
  <div>
    <TimesImage
      aspectRatio={1.5}
      caption={
        <Caption
          credits="Other credits"
          text="Another caption"
        />
      }
      fadeImageIn={false}
      highResSize={null}
      lowResSize={null}
      uri="https://img/someImage"
    />
  </div>
  <div>
    <div>
      <div>
        <div>
          Another caption
        </div>
        <div>
          OTHER CREDITS
        </div>
      </div>
    </div>
  </div>
</Component>
`;

exports[`6. primary image with caption and credits with center caption override 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  padding-left: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 0px;
  }
}

<Component
  captionOptions={
    Object {
      "caption": "Some caption",
      "credits": "Some credits",
    }
  }
  imageOptions={
    Object {
      "display": "primary",
      "ratio": "15:12",
      "uri": "https://img/someImage",
    }
  }
>
  <div>
    <TimesImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      fadeImageIn={false}
      highResSize={null}
      lowResSize={null}
      uri="https://img/someImage"
    />
  </div>
  <div>
    <InsetCenteredCaption
      credits="Some credits"
      text="Some caption"
    >
      <responsiveweb__InsetCaptionStyle>
        <div
          className="c1"
        >
          <CentredCaption
            credits="Some credits"
            text="Some caption"
          >
            <div>
              <div>
                <div>
                  Some caption
                </div>
                <div>
                  SOME CREDITS
                </div>
              </div>
            </div>
          </CentredCaption>
        </div>
      </responsiveweb__InsetCaptionStyle>
    </InsetCenteredCaption>
  </div>
</Component>
`;

exports[`7. secondary image with caption and credits with center caption override 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<Component
  captionOptions={
    Object {
      "caption": "Another caption",
      "credits": "Other credits",
    }
  }
  imageOptions={
    Object {
      "display": "secondary",
      "ratio": "3:2",
      "uri": "https://img/someImage",
    }
  }
>
  <div>
    <TimesImage
      aspectRatio={1.5}
      caption={
        <Caption
          credits="Other credits"
          text="Another caption"
        />
      }
      fadeImageIn={false}
      highResSize={null}
      lowResSize={null}
      uri="https://img/someImage"
    />
  </div>
  <div>
    <CentredCaption
      credits="Other credits"
      text="Another caption"
    >
      <div>
        <div>
          <div>
            Another caption
          </div>
          <div>
            OTHER CREDITS
          </div>
        </div>
      </div>
    </CentredCaption>
  </div>
</Component>
`;
